# tibiapi

./: .readthedocs.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: ---suggestion-for-improving-performance.md
.github/workflows/: ci.yml
docs/: index.md
docs/api/_common/: container.md  rect-image.md
docs/api/battle-list/: battle-list.md  creature.md  top-bar.md
docs/api/minimap/: minimap.md
docs/api/skills/: skills.md
docs/api/status-bar/: status-bar.md
docs/development/: installation.md  usage.md
docs/home/: about.md  caveats.md  how-it-works.md  requirements.md
src/_common/: typings.py
src/_common/container/: __init__.py  container.py  resizeBehaviour.py  scrollBehaviour.py
src/actionBar/: actionBar.py  cooldown.py  cooldownBar.py  slot.py
src/battleList/: __init__.py  battleList.py  battleListContainer.py  battleListCreature.py  config.py  creature.py  topBar.py  typings.py  utils.py
src/chat/: chat.py  message.py  tab.py
src/gameWindow/: __init__.py  config.py  creature.py  gameWindow.py  typings.py  utils.py
src/geometry/: bbox.py  container.py  rectImage.py  test_bbox.py  test_rectImage.py
src/inventory/: __init__.py  inventory.py  specialConditions.py
src/minimap/: __init__.py  minimap.py
src/sidebar/: sidebar.py
src/skills/: config.py  skills.py  utils.py
src/statusBar/: __init__.py  statusBar.py  utils.py
src/utils/: image.py
tests/battleList/: test_battleList.py  test_battleList_configureCreaturesButton.py  test_battleList_isConfiguringCreatures.py  test_configureCreaturesButton.py  test_hidePlayersButton.py  test_isConfiguringCreatures.py
tibiapi/_common/: typings.py
tibiapi/actionBar/: __init__.py  actionBar.py  cooldownBar.py  slot.py
tibiapi/battleList/: __init__.py  battleList.py  config.py  creature.py  topBar.py  utils.py
tibiapi/chat/: __init__.py  chat.py  message.py  tab.py
tibiapi/gameWindow/: config.py  creature.py  gameWindow.py  utils.py
tibiapi/inventory/: inventory.py
tibiapi/minimap/: config.py  minimap.py  typings.py  utils.py
tibiapi/skills/: __init__.py  config.py  skills.py  typings.py  utils.py
tibiapi/statusBar/: statusBar.py  typings.py  utils.py
tibiapi/utils/: __init__.py  color.py  image.py
tibiapi/wiki/: creatures.py
(+30 files in other folders)
